crates/gridwell-writer-rtf/tests/snapshots/snapshots__regional-sales.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\pard\b\fs36 Regional Sales Performance\b0\par
\pard\fs24 Fiscal years 2023\u8211?2024 (in millions USD)\par
\par
\trowd\trhdr\cellx2160\cellx4320\cellx8640
\pard\intbl\b \cell
\pard\intbl\qr\b \cell
\pard\intbl\qr\b Financials\cell
\row
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\b Country\cell
\pard\intbl\qr\b Year\cell
\pard\intbl\qr\b Revenue\cell
\pard\intbl\qr\b Profit\cell
\row
\trowd\trqc\cellx8640
\pard\intbl\b North America\b0\cell
\row
\trowd\clvmgf\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl United States\cell
\pard\intbl\qr 2023\cell
\pard\intbl\qr 1,250.3\cell
\pard\intbl\qr 270.1\super 1\nosupersub \cell
\row
\trowd\clvmrg\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\cell
\pard\intbl\qr 2024\cell
\pard\intbl\qr 1,380.7\cell
\pard\intbl\qr 330.3\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl Canada\cell
\pard\intbl\qr 2024\cell
\pard\intbl\qr 420.1\cell
\pard\intbl\qr 109.5\cell
\row
\trowd\trqc\cellx8640
\pard\intbl\b Europe\b0\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl Germany\cell
\pard\intbl\qr 2024\cell
\pard\intbl\qr 945.2\cell
\pard\intbl\qr 164.9\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl France\cell
\pard\intbl\qr 2024\cell
\pard\intbl\qr 610.8\cell
\pard\intbl\qr 120.6\cell
\row
\par
\pard\fs18 \super 1\nosupersub  Includes one-time restructuring charge.\par
\par
\pard\fs18 Source: Internal finance database, June 2026.\par
}
