crates/gridwell-writer-rtf/tests/snapshots/snapshots__rowspan-basic.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Country\cell
\pard\intbl\b Value\cell
\row
\trowd\clvmgf\cellx2160\cellx4320
\pard\intbl Japan\cell
\pard\intbl 100\cell
\row
\trowd\clvmrg\cellx2160\cellx4320
\pard\intbl\cell
\pard\intbl 110\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Korea\cell
\pard\intbl 80\cell
\row
}
