crates/gridwell-writer-rtf/tests/snapshots/snapshots__scientific-table.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\pard\b\fs36 Reaction rate constants\b0\par
\par
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\b Compound\cell
\pard\intbl\qr\b k (s\u8315?\u185?)\super a\nosupersub \cell
\pard\intbl\qr\b T (K)\cell
\pard\intbl\qr\b Ea (kJ/mol)\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl A\cell
\pard\intbl\qr 1.2\u215?10\u179?\cell
\pard\intbl\qr 298\cell
\pard\intbl\qr 52.3\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl B\cell
\pard\intbl\qr 3.4\u215?10\u178?\cell
\pard\intbl\qr 298\cell
\pard\intbl\qr 61.0\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl C\cell
\pard\intbl\qr 8.9\u215?10\u185?\cell
\pard\intbl\qr 310\cell
\pard\intbl\qr 70.8\cell
\row
\par
\pard\fs18 \super a\nosupersub  Measured under pseudo-first-order conditions.\par
\par
\pard\fs18 Source: laboratory notebook, 2026.\par
}
