crates/gridwell-writer-rtf/tests/snapshots/snapshots__single-column.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160
\pard\intbl\plain\b Item\cell
\row
\trowd\cellx2160
\pard\intbl\plain First\cell
\row
\trowd\cellx2160
\pard\intbl\plain Second\cell
\row
\trowd\cellx2160
\pard\intbl\plain Third\cell
\row
}
