crates/gridwell-writer-rtf/tests/snapshots/snapshots__single-row.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\plain\b W\cell
\pard\intbl\plain\b X\cell
\pard\intbl\plain\b Y\cell
\pard\intbl\plain\b Z\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\plain 1\cell
\pard\intbl\plain 2\cell
\pard\intbl\plain 3\cell
\pard\intbl\plain 4\cell
\row
}
