crates/gridwell-writer-rtf/tests/snapshots/snapshots__single-stub.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Region\cell
\pard\intbl\qr\b Sales\cell
\pard\intbl\qr\b Growth\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl East\cell
\pard\intbl\qr 120\cell
\pard\intbl\qr 4%\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl West\cell
\pard\intbl\qr 98\cell
\pard\intbl\qr 2%\cell
\row
}
