crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_colspan_basic.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/colspan_basic.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160\cellx6480
\pard\intbl\b \cell
\pard\intbl\b Scores\cell
\row
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Name\cell
\pard\intbl\b Q1\cell
\pard\intbl\b Q2\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Alice\cell
\pard\intbl 90\cell
\pard\intbl 95\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Bob\cell
\pard\intbl 85\cell
\pard\intbl 88\cell
\row
}
