crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_column_widths.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/column_widths.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx3000\cellx5160\cellx7320\cellx9480\cellx11640
\pard\intbl\b Fixed PX\cell
\pard\intbl\b Percent\cell
\pard\intbl\b Fractional\cell
\pard\intbl\b 2x Fractional\cell
\pard\intbl\b Auto\cell
\row
\trowd\cellx3000\cellx5160\cellx7320\cellx9480\cellx11640
\pard\intbl 200px wide\cell
\pard\intbl 20% wide\cell
\pard\intbl 1fr\cell
\pard\intbl 2fr\cell
\pard\intbl auto\cell
\row
\trowd\cellx3000\cellx5160\cellx7320\cellx9480\cellx11640
\pard\intbl content\cell
\pard\intbl content\cell
\pard\intbl content\cell
\pard\intbl content\cell
\pard\intbl content\cell
\row
}
