crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_comprehensive_reference.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
assertion_line: 96
expression: "render(\"comprehensive/reference_table.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;\red51\green51\blue51;\red102\green102\blue102;\red240\green240\blue240;\red85\green85\blue85;\red250\green250\blue250;}
\pard\b\fs36 Regional Sales Performance\b0\par
\pard\fs24 Fiscal years 2023\u8211?2024 (in millions USD)\par
\par
\trowd\trhdr\cellx2160\cellx4320\cellx10800
\pard\intbl\b\b\cf3 \cell
\pard\intbl\b\b\cf3 \cell
\pard\intbl\b\b\cf3 Financials\cell
\row
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800
\pard\intbl\b\b\cf3 Country\cell
\pard\intbl\b\b\cf3 Year\cell
\pard\intbl\b\b\cf3 Revenue\cell
\pard\intbl\b\b\cf3 Expenses\cell
\pard\intbl\b\b\cf3 Profit\cell
\row
\trowd\trqc\cellx10800
\pard\intbl\b North America\b0\cell
\row
\trowd\clvmgf\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800
\pard\intbl\cf3 United States\cell
\pard\intbl\cf3 2023\cell
\pard\intbl\cf3 1,250.3\cell
\pard\intbl\cf3 980.2\cell
\pard\intbl\b\cf3 270.1\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\cf3 2024\cell
\pard\intbl\cf3 1,380.7\cell
\pard\intbl\cf3 1,050.4\super 1\nosupersub \cell
\pard\intbl\b\cf3 330.3\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800
\pard\intbl\cf3 Canada\cell
\pard\intbl\cf3 2024\cell
\pard\intbl\cf3 420.1\cell
\pard\intbl\cf3 310.6\cell
\pard\intbl\b\cf3 109.5\cell
\row
\trowd\clcbpat7\cellx2160\clcbpat7\cellx4320\clcbpat7\cellx6480\clcbpat7\cellx8640\clcbpat7\cellx10800
\pard\intbl\b\i\cf6 Total\cell
\pard\intbl\b\cf6 \u8212?\cell
\pard\intbl\b\cf6 3,051.1\cell
\pard\intbl\b\cf6 2,341.2\cell
\pard\intbl\b\cf6 709.9\cell
\row
\trowd\trqc\cellx10800
\pard\intbl\b Europe\b0\cell
\row
\trowd\clvmgf\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800
\pard\intbl\cf3 Germany\cell
\pard\intbl\cf3 2023\cell
\pard\intbl\cf3 890.5\cell
\pard\intbl\cf3 720.1\cell
\pard\intbl\b\cf3 170.4\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\cf3 2024\cell
\pard\intbl\cf3 945.2\cell
\pard\intbl\cf3 780.3\cell
\pard\intbl\b\cf3 164.9\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800
\pard\intbl\cf3 France\cell
\pard\intbl\cf3 2024\cell
\pard\intbl\cf3 610.8\cell
\pard\intbl\cf3 490.2\cell
\pard\intbl\b\cf3 120.6\cell
\row
\trowd\clcbpat7\cellx2160\clcbpat7\cellx4320\clcbpat7\cellx6480\clcbpat7\cellx8640\clcbpat7\cellx10800
\pard\intbl\b\i\cf6 Total\cell
\pard\intbl\b\cf6 \u8212?\cell
\pard\intbl\b\cf6 2,446.5\cell
\pard\intbl\b\cf6 1,990.6\cell
\pard\intbl\b\cf6 455.9\cell
\row
\par
\pard\fs18 \super 1\nosupersub  Includes one-time restructuring charge.\par
\par
\pard\fs18 Source: Internal finance database, June 2025.\par
}
