crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_content_rich.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/content_rich.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Label\cell
\pard\intbl\b Content\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Rich content\cell
\pard\intbl Normal text, bold text\line second line with \super *\nosupersub \cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Image cell\cell
\pard\intbl Trend: sparkline\cell
\row
\par
\pard\fs18 \super *\nosupersub  Estimated value.\par
}
