crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_empty_body.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/empty_body.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Name\cell
\pard\intbl\b Age\cell
\pard\intbl\b City\cell
\row
}
