crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_footnote_single.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/footnote_single.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Item\cell
\pard\intbl\b Price\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Widget\cell
\pard\intbl $9.99\super 1\nosupersub \cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Gadget\cell
\pard\intbl $19.99\cell
\row
\par
\pard\fs18 \super 1\nosupersub  Price valid through end of quarter.\par
}
